New data from 2025-02-06

--- a/mechanical_properties/Experiments/20250204_Felix/README
+++ b/mechanical_properties/Experiments/20250204_Felix/README
@@ -4,3 +4,6 @@ The 6 bending tests were performed on the removed ice from the plunger side of t
 before the ice break up experiment. 
 
 3 cantilever and 3 3point bending tests were perfomed. 
+
+The 3 cantilever tests were made on the opposite aide as the door. 
+The 3 3pt-bending tests were made on the same side as the door. 
