--- a/mechanical_properties/Experiments/20250204_Felix/README
+++ b/mechanical_properties/Experiments/20250204_Felix/README
@@ -7,3 +7,6 @@ before the ice break up experiment.
 
 The 3 cantilever tests were made on the opposite aide as the door. 
 The 3 3pt-bending tests were made on the same side as the door. 
+
+
+NOTES: For those type of experiments we use the 
